fix(track_page_visualization_bug): added overflow-y auto

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,6 +4,7 @@ webmapp-home {
     height: 100%;
     padding: 1%;
     padding-bottom: 100px;
+    overflow-y: auto;
     ion-content {
       --padding-bottom: 100px;
     }
